force-app/main/default/objects/TTS_Space_Tenant__c/TTS_Space_Tenant__c.object-meta.xml
<CustomObject>
    <description>Represents an organisation or individual occupying a managed space for a defined period.</description>
    <label>Space Tenant</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>Space Tenant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Space Tenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>