force-app/main/default/objects/TTS_Space_Tenant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the organisation occupying the space for a company tenancy.</description>
    <inlineHelpText>Select the tenant organisation when the tenancy is for a company.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Space_Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>