force-app/main/default/objects/TTS_Space_Tenant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the person occupying the space for an individual tenancy.</description>
    <inlineHelpText>Select the tenant contact when the tenancy is for an individual.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Space_Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>