force-app/main/default/objects/TTS_Space_Tenant__c/fields/Current_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Current_Tenant__c</fullName>
    <description>Indicates whether today's date falls on or after the start date and before the end date, or no end date is set.</description>
    <formula>IF(
AND(
OR(ISBLANK(End_Date__c),End_Date__c &gt; TODAY()),
 Start_Date__c &lt;= TODAY()
), TRUE, FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows whether this tenancy is active today based on its start and end dates.</inlineHelpText>
    <label>Current Tenant</label>
    <type>Checkbox</type>
</CustomField>