force-app/main/default/objects/TTS_Space_Tenant__c/fields/Departure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Departure_Reason__c</fullName>
    <description>Captures why a tenancy ended, for retention and outcome reporting.</description>
    <inlineHelpText>Select the reason this tenancy ended. Complete when setting an End Date.</inlineHelpText>
    <label>Departure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Breach</fullName>
            </value>
            <value>
                <fullName>Ceased Trading</fullName>
            </value>
            <value>
                <fullName>Completed Term</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Non-payment</fullName>
            </value>
            <value>
                <fullName>Relocated to Own Premises</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>