force-app/main/default/objects/TTS_Space_Tenant__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Records the date when the tenancy ends or ended.</description>
    <inlineHelpText>Enter the final date of the tenancy, or leave blank if it has no scheduled end.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>