force-app/main/default/objects/TTS_Space_Tenant__c/fields/Membership_Tier__c.field-meta.xml
<CustomField>
    <fullName>Membership_Tier__c</fullName>
    <description>Records the pricing/subsidy tier under which the tenant occupies the space.</description>
    <inlineHelpText>Select the tenant's membership tier. Values run from fully subsidised to full market rate.</inlineHelpText>
    <label>Membership Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free (Student)</fullName>
            </value>
            <value>
                <fullName>Subsidised</fullName>
            </value>
            <value>
                <fullName>Market Rate</fullName>
            </value>
            <value>
                <fullName>Virtual / Associate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>