force-app/main/default/objects/TTS_Space_Tenant__c/fields/Occupancy_Type__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Type__c</fullName>
    <description>Describes how the tenant physically occupies the space (hot desk, dedicated desk, private office, etc.).</description>
    <inlineHelpText>Select the type of occupancy this tenancy provides.</inlineHelpText>
    <label>Occupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Co-working</fullName>
            </value>
            <value>
                <fullName>Dedicated Desk</fullName>
            </value>
            <value>
                <fullName>Hot Desk</fullName>
            </value>
            <value>
                <fullName>Private Office</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>