force-app/main/default/objects/TTS_Space_Tenant__c/fields/Space__c.field-meta.xml
<CustomField>
    <fullName>Space__c</fullName>
    <description>Associates the tenancy with the parent space being occupied.</description>
    <inlineHelpText>Select the space occupied by this tenant.</inlineHelpText>
    <label>Space</label>
    <referenceTo>TTS_Space__c</referenceTo>
    <relationshipName>Space_Tenants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>