force-app/main/default/objects/TTS_Space_Tenant__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Records the required date when the tenancy begins.</description>
    <inlineHelpText>Enter the first date of the tenancy; new records default to today.</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>