force-app/main/default/objects/TTS_Space_Tenant__c/fields/Tenant_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Name__c</fullName>
    <description>Derives the tenant name from Contact for Individual tenancies or Account for Company tenancies; if Type is blank, it uses whichever relationship is populated.</description>
    <formula>IF(ISBLANK(TEXT(Type__c)),

    IF(AND(ISBLANK(Account__c),NOT(ISBLANK(Contact__c))),
    Contact__r.FirstName &amp; &apos; &apos; &amp;  Contact__r.LastName
    ,
       IF(AND(ISBLANK(Contact__c),NOT(ISBLANK(Account__c))),
       Account__r.Name,
       &apos;&apos;
       )
    )

,
    IF(AND(TEXT(Type__c) = &apos;Individual&apos;, NOT(ISBLANK(Contact__c))),
        Contact__r.FirstName &amp; &apos; &apos; &amp;  Contact__r.LastName
        ,
        
            IF(AND(TEXT(Type__c) = &apos;Company&apos;, NOT(ISBLANK(Account__c))),
                Account__r.Name, 
                &apos;&apos;
            )
        
    )
)</formula>
    <inlineHelpText>Shows the related Contact or Account name selected according to the tenancy type.</inlineHelpText>
    <label>Tenant Name</label>
    <type>Text</type>
</CustomField>