force-app/main/default/objects/TTS_Space_Tenant__c/fields/Total_Active_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Contacts__c</fullName>
    <description>Counts related Space Tenant Contact records marked as current.</description>
    <inlineHelpText>Shows the number of contacts currently active for this tenant.</inlineHelpText>
    <label>Total Active Contacts</label>
    <summaryFilterItems>
        <field>TTS_Space_Tenant_Contact__c.Is_Current_Contact__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>TTS_Space_Tenant_Contact__c.Space_Tenant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>