force-app/main/default/objects/TTS_Space_Tenant__c/fields/Total_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Total_Contacts__c</fullName>
    <description>Counts all Space Tenant Contact records related to this tenant.</description>
    <inlineHelpText>Shows the total number of contacts associated with this tenant.</inlineHelpText>
    <label>Total Contacts</label>
    <summaryForeignKey>TTS_Space_Tenant_Contact__c.Space_Tenant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>