force-app/main/default/objects/TTS_Space_Tenant__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Classifies the tenant as a company or an individual and controls how Tenant Name is derived.</description>
    <inlineHelpText>Select Company for an Account tenant or Individual for a Contact tenant.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>