force-app/main/default/objects/TTS_Space_Tenant__c/fields/Venture_Category__c.field-meta.xml
<CustomField>
    <fullName>Venture_Category__c</fullName>
    <description>Classifies the nature of the tenant venture for enterprise reporting (student, spinout, external, etc.). Distinct from Type, which controls name derivation.</description>
    <inlineHelpText>Select the category that best describes this venture (e.g. Student Startup, Spinout, External / Commercial).</inlineHelpText>
    <label>Venture Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alumni Venture</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>External / Commercial</fullName>
            </value>
            <value>
                <fullName>Graduate Startup</fullName>
            </value>
            <value>
                <fullName>Research Group</fullName>
            </value>
            <value>
                <fullName>Social Enterprise</fullName>
            </value>
            <value>
                <fullName>Spinout</fullName>
            </value>
            <value>
                <fullName>Staff / Academic Startup</fullName>
            </value>
            <value>
                <fullName>Student Startup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>