force-app/main/default/objects/TTS_Space_Tenant__c/fields/Venture_Stage__c.field-meta.xml
<CustomField>
    <fullName>Venture_Stage__c</fullName>
    <description>Tracks the development stage of the tenant venture, from pre-incubation through to graduation or exit.</description>
    <inlineHelpText>Select the venture's current development stage. Values are listed in lifecycle order.</inlineHelpText>
    <label>Venture Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-incubation</fullName>
            </value>
            <value>
                <fullName>Ideation</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>MVP / Build</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Scaling</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Exited / Ceased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>